--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="ngMain">
 
   {% include head.html %}
 
-  <body>
+  <body ng-controller="layoutController">
 
     {% include header.html %}
 
@@ -12,9 +12,7 @@
         {{ content }}
       </div>
     </div>
-
     {% include footer.html %}
-
   </body>
 
 </html>
